--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,19 +39,19 @@ message(STATUS "Using CMake version ${CMAKE_VERSION}")
 option(MZ_COMPAT "Enables compatibility layer" ON)
 # Compression library options
 option(MZ_ZLIB "Enables ZLIB compression" ON)
-option(MZ_BZIP2 "Enables BZIP2 compression" ON)
-option(MZ_LZMA "Enables LZMA & XZ compression" ON)
-option(MZ_ZSTD "Enables ZSTD compression" ON)
-cmake_dependent_option(MZ_LIBCOMP "Enables Apple compression" ON "APPLE" OFF)
+option(MZ_BZIP2 "Enables BZIP2 compression" OFF)
+option(MZ_LZMA "Enables LZMA & XZ compression" OFF)
+option(MZ_ZSTD "Enables ZSTD compression" OFF)
+cmake_dependent_option(MZ_LIBCOMP "Enables Apple compression" ON "APPLE" ON)
 option(MZ_FETCH_LIBS "Enables fetching third-party libraries if not found" ${WIN32})
 option(MZ_FORCE_FETCH_LIBS "Enables fetching third-party libraries always" OFF)
 # Encryption support options
-option(MZ_PKCRYPT "Enables PKWARE traditional encryption" ON)
-option(MZ_WZAES "Enables WinZIP AES encryption" ON)
+option(MZ_PKCRYPT "Enables PKWARE traditional encryption" OFF)
+option(MZ_WZAES "Enables WinZIP AES encryption" OFF)
 cmake_dependent_option(MZ_OPENSSL "Enables OpenSSL for encryption" ON "UNIX" OFF)
 cmake_dependent_option(MZ_LIBBSD "Builds with libbsd crypto random" ON "UNIX" OFF)
 # Character conversion options
-option(MZ_ICONV "Enables iconv for string encoding conversion" ON)
+option(MZ_ICONV "Enables iconv for string encoding conversion" OFF)
 # Code generation options
 option(MZ_COMPRESS_ONLY "Only support compression" OFF)
 option(MZ_DECOMPRESS_ONLY "Only support decompression" OFF)
